syntax = "proto3";

package pudicitia.hr;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service Organization {
  rpc ListDepartments (ListDepartmentsRequest) returns (ListDepartmentsResponse);
  rpc CreateDepartment (CreateDepartmentRequest) returns (google.protobuf.Empty);
  rpc UpdateDepartment (UpdateDepartmentRequest) returns (google.protobuf.Empty);
  rpc DeleteDepartment (DeleteDepartmentRequest) returns (google.protobuf.Empty);
  rpc ListEmployees (ListEmployeesRequest) returns (ListEmployeesResponse);
  rpc GetEmployee (GetEmployeeRequest) returns (Employee);
}

message Department {
  string id = 1;
  string name = 2;
  google.protobuf.StringValue parent_id = 3;
}

message ListDepartmentsRequest {
}

message ListDepartmentsResponse {
  repeated Department items = 1;
}

message CreateDepartmentRequest {
}

message UpdateDepartmentRequest {
}

message DeleteDepartmentRequest {
}

message Employee {
  string id = 1;
  string name = 2;
  string display_name = 3;
  string department_id = 4;
  string job_title_id = 5;
}

message ListEmployeesRequest {
  int32 page_index = 1;
  int32 page_size = 2;
  string department_id = 3;
}

message ListEmployeesResponse {
  repeated Employee items = 1;
  int32 item_count = 2;
}

message GetEmployeeRequest {
}